temporary fix on DOM elements overflowing

--- a/styles.css
+++ b/styles.css
@@ -675,6 +675,7 @@ template {
     font-family: 'Open Sans', sans-serif;
     font-size: .85rem;
     font-weight: 500;
+    overflow: hidden;
 }
 
 .global-nav__section a,
@@ -729,6 +730,7 @@ template {
     display: inline-flex;
     flex-direction: column;
     transition: all 150ms ease-in;
+    overflow: hidden;
 }
 
 .dropdown-wrapper.wrapper-1.uncollapsed {
